# repo-manage-trial

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pr-labeler.yaml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  task.md  task.yaml
.github/workflows/: cpp-ci.yaml  docker.yaml  github-release.yaml  issue-link.yaml  pr-labeler.yaml  pre-commit.yaml  private-repo.yaml  python-ci.yaml  release-drafter.yaml  review-assign.yaml  sementic-pull-request.yaml
docker/: Dockerfile  build.sh  check_env.py
docs/: ansible.md  dependabot.md  github-release.md  github-template.md  pre-commit.md  unittest.md
mycpppkg/: CMakeLists.txt
mycpppkg/include/mycpppkg/: calculate.hpp  image.hpp
mycpppkg/src/: calculate.cpp  image.cpp  main.cpp
mycpppkg/test/: CMakeLists.txt  test_calculate.cpp
mygopkg/greetings/: go.mod  greetings.go
mygopkg/hello/: go.mod  hello.go
mypypkg/mypypkg/: calculate.py
mypypkg/test/: test_calculate.py
