[tool.poetry]
name = "mypypkg"
version = "0.1.0"
description = ""
authors = ["Kotaro Uetake <kotaro.uetake@tier4.jp>"]
packages = [
	 { include = "mypypkg", from = "mypypkg" }
]

[tool.poetry.dependencies]
python = "^3.7.11"
# mypypkg = {path = "mypypkg"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
